--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,17 +6,19 @@
     <div class="line3"></div>
   </div>
   <ul class="nav-list">
+    {{#if user}}
     <li><a href="/caixa">Caixa</a></li>
     <li><a href="/estoque">Estoque</a></li>
     <li><a href="#">Financeiro</a></li>
     <li><a href="#">Relatorios</a></li>
-    {{#if user.eadmin}}
     <li><a href="/usuarios">Usuarios</a></li>
-    {{/if}}
     <li><a href="/logout">Sair</a></li>
+    {{else}}
+
+    {{/if}}
   </ul>
 </nav>
-
+    
 <style>
   * {
     margin: 0;
@@ -24,7 +26,7 @@
   }
 
   a, .title {
-    color: #ff35a4;
+    color: #BF8C2C;
     text-decoration: none;
     transition: 0.3s;
     font-weight: bold;
