--- a/src/public/css/geral.css
+++ b/src/public/css/geral.css
@@ -8,6 +8,7 @@
   color: #f0ffff94;
   font-size: 12px;
 }
+
 .main-login {
   width: 100vw;
   height: 100vh;
@@ -26,15 +27,16 @@
   flex-direction: column;
 }
 
+.left-image-login {
+  width: 90%;
+  height: auto;
+}
+
 .left-login > h1 {
-  color: #ff35a4;
+  color: #BF8C2C;
+  /* color: #ff35a4; */
   font-size: 3vw;
 }
-
-.left-image-login {
-  width: 35vw;
-}
-
 
 .right-login {
   width: 50%;
@@ -59,6 +61,7 @@
     justify-content: center;
     align-items: center;
     visibility: hidden;
+    z-index: 99;
 }
 
 .msg p {
@@ -98,7 +101,7 @@ text-align: center;
 }
 
 .card-login > h1 {
-  color: #ff35a4;
+  color: #BF8C2C;
   font-weight: 800;
   margin: 0;
 }
@@ -114,13 +117,13 @@ text-align: center;
   border-radius: 20px;
   box-shadow: 0px 10px 40px #000;
   margin: 0;
-  max-height: 400px;
+  /* max-height: 400px; */
 }
 
 .card > h1 {
-  color: #ff35a4;
+  color: #BF8C2C;
   font-weight: 800;
-  margin: 0 0 50px 0;
+  margin: 0 0 10px 0;
 }
 
 .line {
@@ -164,7 +167,7 @@ text-align: center;
   color: #f0ffff94;
 }
 
-.btn-salvar ,.btn-login {
+.btn-salvar ,.btn-login, .btn-finalizar {
   width: 100%;
   padding: 16px 0px;
   margin: 25px;
@@ -175,9 +178,14 @@ text-align: center;
   font-weight: 800;
   letter-spacing: 3px;
   color: #2b134b;
-  background: #ff35a4;
+  background: #BF8C2C;
   cursor: pointer;
-  box-shadow: 0px 10px 40px -12px #f05dad52;
+  box-shadow: 0px 10px 40px -12px ;
+}
+
+.btn-finalizar {
+  width: 20%;
+  margin-left: 60%;
 }
 
 .menu-estoque {
@@ -191,28 +199,28 @@ text-align: center;
   font-weight: 800;
   letter-spacing: 3px;
   color: #2b134b;
-  background: #ff35a4c2;
+  background: #BF8034;
   cursor: pointer;
-  box-shadow: 0px 10px 40px -12px #f05dad52;
+  box-shadow: 0px 10px 40px -12px #593202;
   text-decoration: none;
   text-align: center;
 }
 
 .btnMenu {
   text-align: center;
-  color: #ff35a4;
+  color: #BF8C2C;
 }
 
 .list {
   overflow: auto;
 }
 
-.select {
+.select , .select-pg, .select-acesso{
   position: relative;
   width: 100%;
 }
 
-.btn-select {
+.btn-select, .btn-select-pg, .btn-select-acesso {
   padding: 15px 8px;
   width: 100%;
   border-radius: 10px;
@@ -222,11 +230,11 @@ text-align: center;
   color: #f0ffff94;
 }
 
-.btn-select span {
+.btn-select span, .btn-select-pg span, .btn-select-acesso span{
   width: 100%;
 }
 
-.select-content {
+.select-content, .select-content-pg, .select-content-acesso{
   border: 1px solid gray;
   border-radius: 5px;
   padding: 10px;
@@ -239,7 +247,7 @@ text-align: center;
   color: #f0ffff94;
 }
 
-.select-content input {
+.select-content input, .select-content-pg input{
   padding: 3px;
   width: 90%;
   margin: 5px;
@@ -248,7 +256,7 @@ text-align: center;
   border-radius: 5px;
 }
 
-.select-content .options {
+.select-content .options, .select-content-pg .options-pg, .select-content-acesso .options-acesso{
   max-height: 250px;
   list-style: none;
   overflow: auto;
@@ -256,7 +264,7 @@ text-align: center;
   font-size: 14px;
 }
 
-.options li {
+.options li, .options-pg li, .options-acesso li{
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
@@ -265,12 +273,95 @@ text-align: center;
   border-radius: 2px;
 }
 
-.options li:hover {
+.options li:hover, .options-pg li:hover, .options-acesso li:hover{
   background-color: #aaa;
   color: #000;
 }
 
-.select .active {
+.select .active, .select-pg .active, .select-acesso .active{
+  display: block;
+}
+
+.tab-caixa {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  height: 190px;
+}
+
+.tab-caixa thead {
+  display: inline-block;
+  width: 99%;
+  background-color: #514869;
+  border-radius: 10px 10px 0 0 ;
+}
+
+.tab-caixa th {
+  color: #f0ffff94;
+
+}
+
+.tab-caixa tbody {
+  display: inline-block;
+  overflow: auto;
+  width: 100%;
+  height: 200px;
+  background-color: #f0ffff94;
+
+}
+
+.tab-caixa td {
+  text-align: center;
+  background-color: #f0ffff94;
+}
+
+.l1{
+  width: 200px;
+}
+.l2{
+  width: 550px;
+}
+.l3{
+  width: 20%;
+}
+.l4{
+  width: 20%;
+}
+.l5{
+  width: 20%;
+}
+
+.total {
+  margin-top: 50px;
+  width: 20%;
+  flex-direction: row;
+}
+
+.total > label {
+  width: 300px;
+  align-self: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.total > input {
+  text-align: end;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(200,200,200, 0.7);
+}
+
+.active {
   display: block;
 }
 
@@ -302,5 +393,6 @@ text-align: center;
 
   .left-image-login {
     width: 50vw;
+    overflow: hidden;
   }
 }
