--- a/views/estoque/insert.handlebars
+++ b/views/estoque/insert.handlebars
@@ -1,22 +1,32 @@
 {{>navbar}}
+{{#if error_msg}}
+  <div class="invisible">erro,{{error_msg}}</div>
+{{/if}}
 {{#if msg}}
   <div class="invisible">{{tipo}},{{msg}}</div>
 {{/if}}
 <form action="" method="post" id="form">
+  <input type="hidden" id="prod-select"  class="invisible">
   <input type="hidden" id="id_estoque" name="id" class="invisible"/>
+  <input type="hidden" id="cod_estoque" name="codigo" class="invisible"/>
+  <input type="hidden" id="desc_estoque" name="descricao" class="invisible"/>
   <div class="container">    
     <div class="card">
       <h1>Entrada / Saida de Estoque</h1>
         <div class="msg" id="msg"><p id="msgtext"></p></div>
         <div class="line">
-        <div class="textfield cod">
-
-          <label for="codigoEntSai_estoque">Código</label>
-          <input type="text" name="codigo" id="codigoEntSai_estoque" placeholder="Ex: EA123" autocomplete="off"/>
-        </div>
         <div class="textfield">
-          <label for="descricao_estoque">Descrição</label>
-          <input type="text" name="descricao" id="descricao_estoque" placeholder="Ex: Esmalte azul 123" autocomplete="off" readonly/>
+          <label for="btn-select-prod">Produto</label>
+          <div class="select-prod">
+            <div class="btn-select-prod">
+              <span>Selecione um produto</span>
+            </div>
+            <div class="select-content-prod">
+              <input type="text" id="input-select-prod">
+              <ul class="options-prod">
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="textfield">
           <label for="fabricante_estoque">Fabricante</label>
