--- a/views/estoque/menu.handlebars
+++ b/views/estoque/menu.handlebars
@@ -1,7 +1,11 @@
  {{>navbar}}
+ {{#if error_msg}}
+  <div class="invisible">erro,{{error_msg}}</div>
+{{/if}}
  <div class="container">    
     <div class="card">
       <h1>Menu de controle do estoque</h1>
+      <div class="msg" id="msg"><p id="msgtext"></p></div>
       <a  class="menu-estoque" href="/estoque/cadastro">Cadastro</a>
       <a  class="menu-estoque" href="/estoque/insert">Entrada / Saida</a>
       {{!-- <a  class="menu-estoque" href="/estoque/list">Lista de movimentações</a> --}}
