--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -48,6 +48,7 @@
     align-items: center;
     background: #514869;
     height: 8vh;
+    z-index: 99;
   }
 
   .nav-list {
@@ -80,7 +81,7 @@
       top: 8vh;
       right: 0;
       width: 50vw;
-      height: 92vh;
+      height: 89vh;
       background: #23232e;
       flex-direction: column;
       align-items: center;
@@ -88,6 +89,7 @@
       transform: translateX(100%);
       display: none;
       transition: transform 0.3s ease-in;
+      z-index: 99;
     }
 
     .nav-list li {
