Fechamento de caixa

--- a/views/caixa/index.handlebars
+++ b/views/caixa/index.handlebars
@@ -12,7 +12,7 @@
   <div class="container">    
     <div class="modal">
       <div class="cardModal">
-        <h1>Finalizar compra</h1>
+        <h1>Finalizar venda</h1>
         <div class="line">
           <div class="textfield">
             <label for="form-pg">Form Pagamento</label>
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="card ">
+    <div class="cardCaixa ">
       <h1>Caixa</h1>
       <div class="msg" id="msg"><p id="msgtext"></p></div>
       <div class="line">
