--- a/views/estoque/menu.handlebars
+++ b/views/estoque/menu.handlebars
@@ -3,11 +3,12 @@
   <div class="invisible">erro,{{error_msg}}</div>
 {{/if}}
  <div class="container">    
-    <div class="card">
-      <h1>Menu de controle do estoque</h1>
+    <div class="cardMenuEstoque">
+      <h1>Menu de controle de estoque</h1>
       <div class="msg" id="msg"><p id="msgtext"></p></div>
       <a  class="menu-estoque" href="/estoque/cadastro">Cadastro</a>
-      <a  class="menu-estoque" href="/estoque/insert">Entrada / Saida</a>
+      <a  class="menu-estoque" href="/estoque/entrada">Entrada</a>
+      <a  class="menu-estoque" href="/estoque/saida">Saida</a>
       {{!-- <a  class="menu-estoque" href="/estoque/list">Lista de movimentações</a> --}}
     </div>
   </div>
