--- a/src/public/css/geral.css
+++ b/src/public/css/geral.css
@@ -106,7 +106,7 @@ text-align: center;
   margin: 0;
 }
 
-.card, .cardModal {
+.card, .cardModal, .cardCaixa, .cardEstoque, .cardMenuEstoque, .cardMenuCaixa, .cardFecha {
   width: 90%;
   display: flex;
   justify-content: center;
@@ -117,19 +117,34 @@ text-align: center;
   border-radius: 20px;
   box-shadow: 0px 10px 40px #000;
   margin: 0;
-  /* max-height: 400px; */
+  max-height: 80vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.card > h1, .cardModal > h1 {
+.card > h1, .cardModal > h1, .cardCaixa > h1, .cardEstoque > h1, .cardMenuEstoque > h1, .cardMenuCaixa > h1, .cardFecha > h1 {
   color: #BF8C2C;
   font-weight: 800;
   margin: 0 0 10px 0;
 }
 
-.line {
+.line, .lineFecha{
   display: flex;
   width: 100%;
   flex-direction: row;
+}
+
+.lineFecha {
+  justify-content: space-between;
+}
+
+.lbFechaTotal, .fechaTotal {
+  color: #2b134b;
+  background: #BF8C2C;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .textfield {
@@ -193,7 +208,7 @@ text-align: center;
   margin-left: 10px;
 }
 
-.menu-estoque {
+.menu-estoque, .menu-caixa {
   width: 50%;
   padding: 16px 0px;
   margin: 25px;
@@ -214,6 +229,22 @@ text-align: center;
 .btnMenu {
   text-align: center;
   color: #BF8C2C;
+}
+
+.btnItens, .btnFecha {
+  width: 20%;
+  background: #e7b049;
+  padding: 5px;
+  border-radius: 8px;
+  margin-bottom: 5px;
+  color: #2b134b;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.btnFecha {
+  background: #BF8C2C;
+  font-size: 1.2rem;
 }
 
 .list {
@@ -287,7 +318,7 @@ text-align: center;
   display: block;
 }
 
-.tab-caixa {
+.tab-caixa, .tab-fecha {
   display: block;
   width: 100%;
   border-radius: 10px;
@@ -295,44 +326,79 @@ text-align: center;
   margin-bottom: 10px;
 }
 
-.tab-caixa thead {
+.tab-caixa thead, .tab-fecha thead {
   display: inline-block;
   width: 99%;
   background-color: #514869;
   border-radius: 10px 10px 0 0 ;
 }
 
-.tab-caixa th {
-  color: #f0ffff94;
-
+.tab-fechaItens{
+  display: none;
+  width: 60%;
 }
 
-.tab-caixa tbody {
+.tab-fechaItens thead {
+  display: inline-block;
+  background: #51486952;
+}
+
+.tab-fechaItens thead th {
+  color: #2b134b;
+}
+
+.tab-fechaItens tbody {
+display: inline-block;
+background: #f0ffff84;
+}
+
+.tab-caixa th, .tab-fecha th {
+  color: #f0ffff94;
+}
+
+.tab-caixa tbody, .tab-fecha tbody {
   display: inline-block;
   overflow: auto;
-  width: 100%;
+  width: 99%;
   height: 200px;
   background-color: #f0ffff94;
-
+  margin-bottom: 20px;
 }
 
-.tab-caixa td {
+.tab-fecha tbody {
+  width: 95%;
+  height: auto;
+}
+
+.tab-caixa td, .tab-fecha td, .tab-fechaItens td {
   text-align: center;
   background-color: #f0ffff94;
+}
+tbody .venda {
+  height: 50px;
+  overflow: auto;
 }
 
 .l1{
   width: 200px;
 }
-.l2{
+
+.lf1, .lf11{
+  width: 35%;
+}
+
+.l2, .lf2{
   width: 550px;
 }
-.l3{
+
+.l3, .lf3{
   width: 20%;
 }
+
 .l4{
   width: 20%;
 }
+
 .l5{
   width: 20%;
 }
@@ -442,13 +508,23 @@ text-align: center;
     font-size: 1.5rem;
   }
 
-  .card {
+  .cardCaixa, .cardEstoque {
     width: 70%;
     height: 85%;
     overflow:auto;
   }
 
-  .card h1 {
+  .cardMenuEstoque {
+    width: 70%;
+    height: auto;
+  }
+
+  .cardMenuEstoque h1 {
+    margin-top: 0;
+    font-size: 1.2rem;
+  }
+
+  .cardCaixa h1, .cardEstoque h1 {
     margin-top: 300px;
     margin-bottom: 0px;
   }
