--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -8,8 +8,7 @@
   <ul class="nav-list">
     <li><a href="/caixa">Caixa</a></li>
     <li><a href="/estoque">Estoque</a></li>
-    <li><a href="#">Financeiro</a></li>
-    <li><a href="#">Relatorios</a></li>
+    <li><a href="/relatorios">Relatorios</a></li>
     <li><a href="/usuarios">Usuarios</a></li>
     <li><a href="/logout">Sair</a></li>
   </ul>
