--- a/views/caixa/fechaCaixa.handlebars
+++ b/views/caixa/fechaCaixa.handlebars
@@ -23,7 +23,7 @@
             <input type="hidden" id="idVenda" value="{{id}}">
             <thead>
               <tr>
-                <th class="lf1">Numero da venda</th>
+                <th class="lf1">Número da venda</th>
                 <th class="lf2">Data da venda</th>
                 <th class="lf3">Valor da venda</th>
               </tr>
