--- a/views/caixa/index.handlebars
+++ b/views/caixa/index.handlebars
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="textfield cod">
-          <label for="item-qtde-estoque">Qtde disponivel</label>
+          <label for="item-qtde-estoque">Qtde disponível</label>
           <input type="number" name="qtde-estoque" id="item-qtde-estoque" min="1" value="0" readonly/>
         </div>
         <div class="textfield cod">
@@ -71,8 +71,8 @@
           <table class="tab-caixa">
             <thead>
               <tr>
-                <th class="l1">codigo</th>
-                <th class="l2">Descricao</th>
+                <th class="l1">código</th>
+                <th class="l2">Descrição</th>
                 <th class="l3">Qtde</th>
                 <th class="l4">Valor un</th>
                 <th class="l5">Valor</th>
