--- a/views/estoque/entrada.handlebars
+++ b/views/estoque/entrada.handlebars
@@ -61,7 +61,7 @@
           <input type="text" name="venda" id="venda_estoque" placeholder="0,00" readonly/>
         </div>
         <div class="textfield cod">
-          <label for="qtdeInsert_estoque">**Qtde a alterar</label>
+          <label for="qtdeInsert_estoque">**Qtde a adcionar</label>
           <input type="number" name="qtdeInsert" id="qtdeInsert_estoque" placeholder="Ex: 50" autocomplete="off" min="1" />
         </div>
 
