--- a/views/estoque/menu.handlebars
+++ b/views/estoque/menu.handlebars
@@ -8,7 +8,6 @@
       <div class="msg" id="msg"><p id="msgtext"></p></div>
       <a  class="menu-estoque" href="/estoque/cadastro">Cadastro</a>
       <a  class="menu-estoque" href="/estoque/entrada">Entrada</a>
-      <a  class="menu-estoque" href="/estoque/saida">Saida</a>
-      {{!-- <a  class="menu-estoque" href="/estoque/list">Lista de movimentações</a> --}}
+      <a  class="menu-estoque" href="/estoque/saida">Saída</a>
     </div>
   </div>
