--- a/views/estoque/saida.handlebars
+++ b/views/estoque/saida.handlebars
@@ -11,7 +11,7 @@
   <input type="hidden" id="cod_estoque" name="codigo" class="invisible"/>
   <div class="container">    
     <div class="cardEstoque">
-      <h1>Saida de Estoque</h1>
+      <h1>Saída de Estoque</h1>
         <div class="msg" id="msg"><p id="msgtext"></p></div>
         <div class="line">
         <div class="textfield">
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="textfield">
-          <label for="motivo_saida">motivo</label>
+          <label for="motivo_saida">Motivo</label>
           <input type="text" name="motivo" id="motivo_saida" placeholder="Ex: Quebrou" autocomplete="off"/>
         </div>
       </div>
@@ -38,7 +38,7 @@
           <input type="number" name="qtdeEstoque" id="qtde_estoque" placeholder="Ex: 50" autocomplete="off" readonly/>
         </div>
         <div class="textfield cod">
-          <label for="qtdeSaida_estoque">*Qtde a alterar</label>
+          <label for="qtdeSaida_estoque">*Qtde a subtrair</label>
           <input type="number" name="qtdeSaida" id="qtdeSaida_estoque" placeholder="Ex: 50" autocomplete="off" min="1" />
         </div>
 
@@ -46,7 +46,7 @@
       <div class="lbl">
         <p>(*) OBRIGATÓRIO</p>
       </div>
-      <button class="btn-salvar" id="btnAtualizar_estoqueSaida" disabled>Saida</button>
+      <button class="btn-salvar" id="btnAtualizar_estoqueSaida" disabled>Saída</button>
     </div>
   </div>
 </form>
