--- a/views/relatorio/estoque/movimentacao.handlebars
+++ b/views/relatorio/estoque/movimentacao.handlebars
@@ -14,7 +14,7 @@
       <div class="msg" id="msg"><p id="msgtext"></p></div>
       <div class="line">
         <div class="textfield">
-          <label for="dateIni">*Data inicio</label>
+          <label for="dateIni">*Data início</label>
           <input type="text" name="dateIni" id="dateIni" class="date" placeholder="___/___/___  " autocomplete="off"/>
         </div>
         <div class="textfield">
