--- a/views/relatorio/estoque/relatorioMov.handlebars
+++ b/views/relatorio/estoque/relatorioMov.handlebars
@@ -16,7 +16,7 @@
       <tr>
         <th>Data</th>
         <th>Código</th>
-        <th>entrada / saida</th>
+        <th>entrada / saída</th>
         <th>Qtde</th>
         <th>motivo | fornecedor - nota</th>
         <th>Usuário</th>
