--- a/views/relatorio/menu.handlebars
+++ b/views/relatorio/menu.handlebars
@@ -9,8 +9,8 @@
     <div class="cardMenuRelatorio">
       <h1>Menu de Relatórios</h1>
       <div class="msg" id="msg"><p id="msgtext"></p></div>
-      <a  class="menu-relatorios" href="relatorios/venda">Relatorio de Venda</a>
-      <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatorio de controle de estoque</a>
-      <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatorio de movimentação de estoque</a>
+      <a  class="menu-relatorios" href="relatorios/venda">Relatório de Venda</a>
+      <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatório de controle de estoque</a>
+      <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatório de movimentação de estoque</a>
     </div>
   </div>
