--- a/views/usuarios/index.handlebars
+++ b/views/usuarios/index.handlebars
@@ -10,11 +10,11 @@
       <div class="line">
         <div class="textfield">
           <label for="nome">*Nome</label>
-          <input type="text" name="nome" id="nomeUsuario" placeholder="Ex: João Oliveira | minimo 5 caracteres" autocomplete="off"/>
+          <input type="text" name="nome" id="nomeUsuario" placeholder="Ex: João Oliveira | mínimo 5 caracteres" autocomplete="off"/>
         </div>
         <div class="textfield">
           <label for="usuario">*Nome de Usuário</label>
-          <input type="text" name="usuario" id="cadUsuario" placeholder="Ex: JOliver | minimo 5 caracteres" autocomplete="off"/>
+          <input type="text" name="usuario" id="cadUsuario" placeholder="Ex: JOliver | mínimo 5 caracteres" autocomplete="off"/>
         </div>
       </div>
       <div class="line">
@@ -27,7 +27,7 @@
           <input type="email" name="email" id="email" placeholder="Ex: email@email.com.br" autocomplete="off"/>
         </div>
         <div class="textfield">
-          <label for="form-acesso">*Nivel de acesso</label>
+          <label for="form-acesso">*Nível de acesso</label>
           <div class="select-acesso">
             <input type="text" name="nivel" id="nivelAcesso" class="btn-select-acesso" placeholder="Selecione o nivel de acesso" readonly/>
             <div class="select-content-acesso">
@@ -42,7 +42,7 @@
       <div class="line">
         <div class="textfield">
           <label for="senha">*Senha</label>
-          <input type="password" name="senha" id="senha" placeholder="Minino de 6 digitos." autocomplete="off"/>
+          <input type="password" name="senha" id="senha" placeholder="Mínino de 6 digitos." autocomplete="off"/>
         </div>
         <div class="textfield">
           <label for="conf">*Confirmação de senha</label>
