--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   <script src="/js/jquery-ui.min.js"></script>
   <script src="/js/datepicker-pt-BR.js"></script>
   <link rel="stylesheet" href="/css/geral.css">
-  <title>Cosmeticos</title>
+  <title>Cosméticos</title>
 </head>
 <body>
   {{{body}}}
