--- a/views/estoque/entrada.handlebars
+++ b/views/estoque/entrada.handlebars
@@ -10,6 +10,7 @@
   <input type="hidden" id="id_estoque" name="id" class="invisible"/>
   <input type="hidden" id="cod_estoque" name="codigo" class="invisible"/>
   <input type="hidden" id="desc_estoque" name="descricao" class="invisible"/>
+  <input type="hidden" id="qtdeMin_estoque" name="qtdeMin" class="invisible"/>
   <div class="container">    
     <div class="cardEstoque">
       <h1>Entrada de Estoque</h1>
