--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/logoMin.svg" />
-  <link rel="stylesheet" href="/css/jquery-ui.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/7002eac132.js" crossorigin="anonymous"></script>
-  <script src="/js/jquery.mask.min.js"></script>
+  {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script> --}}
   <script src="/js/jquery.js"></script>
+  <script src="/js/jquery.mask.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
   <script src="/js/datepicker-pt-BR.js"></script>
+  <link rel="stylesheet" href="/css/jquery-ui.min.css">
   <link rel="stylesheet" href="/css/geral.css">
   <title>Cosméticos</title>
 </head>
 <body>
   {{{body}}}
-</body>
   <script src="/js/geral.js"></script>
+</body>
 </html>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100..900&display=swap');
