--- a/views/relatorio/menu.handlebars
+++ b/views/relatorio/menu.handlebars
@@ -11,6 +11,7 @@
       <div class="msg" id="msg"><p id="msgtext"></p></div>
       <a  class="menu-relatorios" href="relatorios/venda">Relatório de Venda</a>
       <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatório de controle de estoque</a>
+      <a  class="menu-relatorios" href="relatorios/estoque/qtdeMin">Relatório de estoque em qtde mínima</a>
       <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatório de movimentação de estoque</a>
     </div>
   </div>
